# maxi-search

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: create_files.rs  expand_files.rs  glob.rs  index.rs  main.rs  query.rs
