[package]
name = "mmsearch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
simple_logger = "4.2.0"
clap = { version="4.4.2", features = ["cargo"]}
nix = { version="0.27.1", features = ["fs"]}
rkyv = "0.7.42"
rkyv_derive = "0.7.42"

[profile.release]
debug = true
